--- a/app/globals.css
+++ b/app/globals.css
@@ -2,23 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   width: 100%;
-  color: var(--foreground);
+  color: #171717;
   height: 100%;
-  background: var(--background);
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   font-family: Arial, Helvetica, sans-serif;
 }
 
